<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/colorNavigation" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorNavigation"
        android:theme="@style/ToolBarDark"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/about" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvVersionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/current_version"
        android:textColor="@color/colorTextGray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical">

        <View style="@style/horizontalLine" />

        <TextView
            android:id="@+id/tvProjectIntroduction"
            style="@style/infoItem"
            android:text="@string/project_introduction" />

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tvCheckUpdate"
            style="@style/infoItem"
            android:text="@string/check_update" />

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tvUpdateDescription"
            style="@style/infoItem"
            android:text="@string/update_description" />

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tvStar"
            style="@style/infoItem"
            android:text="@string/give_a_star" />

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tvDonate"
            style="@style/infoItem"
            android:text="@string/donate" />

        <View style="@style/horizontalLine" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="2dp"
        android:padding="20dp"
        android:text="@string/star"
        android:textColor="@color/colorTextGray"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvGank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="《代码家 · 干货集中营》"
        android:textColor="@color/colorTextBlack"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvDouBan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="《豆瓣开发者服务使用条款》"
        android:textColor="@color/colorTextBlack"
        android:textSize="12sp" />
</LinearLayout>