<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_height"
        android:background="@color/colorNavigation" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorNavigation"
        android:theme="@style/ToolBarDark"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/problem_feedback" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_text_hint"
        android:lineSpacingExtra="2dp"
        android:padding="12dp"
        android:text="@string/problem_feedback_content"
        android:textColor="@color/colorTextGrayDark"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:orientation="vertical">

        <View style="@style/horizontalLine" />

        <TextView
            style="@style/infoItemTitle"
            android:text="Issues" />

        <TextView
            android:id="@+id/tvIssues"
            style="@style/infoItem"
            android:text="ONE" />

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tvProblems"
            style="@style/infoItem"
            android:text="@string/faq_name" />

        <View style="@style/horizontalLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:orientation="vertical">

        <View style="@style/horizontalLine" />

        <TextView
            style="@style/infoItemTitle"
            android:text="@string/contact_me" />

        <TextView
            android:id="@+id/tvQQ"
            style="@style/infoItem"
            android:text="QQ" />

        <View
            style="@style/horizontalLine"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/infoItem"
            android:text="Email" />

        <View style="@style/horizontalLine" />
    </LinearLayout>
</LinearLayout>